--- a/PCB/LEDController_NC-1/LEDController.PcbDoc.htm
+++ b/PCB/LEDController_NC-1/LEDController.PcbDoc.htm
@@ -126,12 +126,12 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">1/28/2022</td>
+            <td class="front_matter_column3">2/3/2022</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">9:58:35 PM</td>
+            <td class="front_matter_column3">1:37:26 AM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
